# addon-blender-gis

./: .pylintrc  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  FINAL_CHECKLIST.md  MP1_THREADING_REFACTOR.md  RELEASE_NOTES_2.0.0.md  RELEASE_PUBLICATION_GUIDE.md  RELEASE_READY.md  RESUMO_EXECUTIVO_PT-BR.md  ST_INTEGRATION_GUIDE.md  ST_PHASES_COMPLETE.md  __init__.py  deploy.sh  geoscene.py  prefs.py  pyproject.toml
.github/workflows/: quality.yml
core/basemaps/: gpkg.py  mapservice.py  sqlite_benchmark.py  sqlite_optimizer.py  tile_download.py
core/proj/: geotransform.py
core/utils/: performance_monitor.py  resilience.py  secrets.py  threading_utils.py
operators/: add_camera_exif.py  dem_download.py  io_get_dem.py  io_import_asc.py
operators/utils/: base_import.py  import_base.py  secrets_operators.py  ui_polish.py
tests/: test_comprehensive.py  test_geotransform.py
