[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | core/lib  # Vendored third-party libraries
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/core/lib/*"]
known_first_party = ["blendergis"]

[tool.pylint.MASTER]
ignore-patterns = ["^test_.*?$"]
load-plugins = ["pylint.extensions.docparams"]
max-line-length = 100

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring (noisy for Blender operators)
    "R0913",  # too-many-arguments
    "W0212",  # protected-access (common in Blender API)
    "C0302",  # too-many-lines (Blender operators files can be large)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["core/lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
